Revision history for {{ $dist->name }}

1.093160  2009-11-12
          use fill_this_in instead of fill_in_string to avoid package error

1.092921  2009-10-19
          catch another class of error

1.092920  2009-10-19
          throw an exception when the template results in an error
