@@ -9,5 +9,3 @@ Text::Template   = 0 ; min unknown
 
 [@RJBS]
 version = 1
-
-[PodPurler]
